--- a/index_nl.html
+++ b/index_nl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#1976d2">
@@ -9,7 +9,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-  <title>Select Your Language</title>
+  <title>Nederlands Pages</title>
   <style>
     :root {
       --primary: #1976d2;
@@ -95,14 +95,12 @@
   </style>
 </head>
 <body>
-  <h1>Welcome! Choose your language:</h1>
+  <h1>Nederlands Pages</h1>
   <nav class="grid">
-    <a href="index_en.html">English</a>
-    <a href="index_es.html">Español</a>
-    <a href="index_nl.html">Nederlands</a>
+    
   </nav>
   <div class="return">
-    
+    <a href="index.html">← Back to language selection</a>
   </div>
 
   <script>
