--- a/index_en.html
+++ b/index_en.html
@@ -9,7 +9,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-  <title>Select Your Language</title>
+  <title>English Pages</title>
   <style>
     :root {
       --primary: #1976d2;
@@ -95,14 +95,29 @@
   </style>
 </head>
 <body>
-  <h1>Welcome! Choose your language:</h1>
+  <h1>English Pages</h1>
   <nav class="grid">
-    <a href="index_en.html">English</a>
-    <a href="index_es.html">Español</a>
-    <a href="index_nl.html">Nederlands</a>
+    <a href="part 1_en.html">Part 1</a>
+    <a href="part 2_en.html">Part 2</a>
+    <a href="part 3_en.html">Part 3</a>
+    <a href="part 4_en.html">Part 4</a>
+    <a href="part 5_en.html">Part 5</a>
+    <a href="part 6_en.html">Part 6</a>
+    <a href="part 7_en.html">Part 7</a>
+    <a href="part 8_en.html">Part 8</a>
+    <a href="part 9_en.html">Part 9</a>
+    <a href="part 10_en.html">Part 10</a>
+    <a href="part 11_en.html">Part 11</a>
+    <a href="part 12_en.html">Part 12</a>
+    <a href="part 13_en.html">Part 13</a>
+    <a href="part 14_en.html">Part 14</a>
+    <a href="part 15_en.html">Part 15</a>
+    <a href="part 16_en.html">Part 16</a>
+    <a href="part 17_en.html">Part 17</a>
+    <a href="part 18_en.html">Part 18</a>
   </nav>
   <div class="return">
-    
+    <a href="index.html">← Back to language selection</a>
   </div>
 
   <script>
