--- a/part 1_en.html
+++ b/part 1_en.html
@@ -26,7 +26,26 @@ h1{text-align:center;margin-bottom:1rem;font-size:1.8rem}
                 border:none;border-radius:8px;cursor:pointer}
 .remember-button{background:#eee;color:#333}
 .remember-button.remembered{background:#43a047;color:#fff}
-.play-button{background:none;font-size:1.2rem;color:#1976d2}
+
+/* In-card play button resized to match 4rem floating buttons */
+.play-button {
+  flex: none;               /* override flex sizing */
+  width: 4rem;              /* ~64px */
+  height: 4rem;             /* ~64px */
+  padding: 0;
+  border: none;
+  border-radius: 50%;
+  font-size: 2.5rem;        /* icon size */
+  background: #fff;
+  color: #1976d2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+
+/* Modal */
 .modal{display:none;position:fixed;top:0;left:0;right:0;bottom:0;
        background:rgba(0,0,0,.5);align-items:center;justify-content:center;
        z-index:1000}
@@ -39,7 +58,7 @@ h1{text-align:center;margin-bottom:1rem;font-size:1.8rem}
 .modal-content .close{float:right;font-size:1.2rem;cursor:pointer}
 .lang-settings{padding:1rem 0;margin-bottom:1.5rem;min-height:180px}
 
-/* --- Enlarged Floating Buttons --- */
+/* Enlarged floating buttons */
 #settings-button,
 #flip-all-button {
   position: fixed;
@@ -51,7 +70,7 @@ h1{text-align:center;margin-bottom:1rem;font-size:1.8rem}
   width: 4rem;        /* ~64px */
   height: 4rem;       /* ~64px */
   padding: 0;
-  font-size: 2.5rem;  /* larger icon */
+  font-size: 2.5rem;  /* icon size */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -61,19 +80,24 @@ h1{text-align:center;margin-bottom:1rem;font-size:1.8rem}
 #flip-all-button { right: 6rem; }
 #settings-button  { right: 1rem; }
 
-/* --- Return Button — bottom-left, larger --- */
-#return-button{
-  position:fixed;
-  bottom:1rem;
-  left:1rem;
-  background:#1976d2;
-  color:#fff;
-  border:none;
-  border-radius:20px;
-  padding:1rem 2rem;
-  font-size:1.2rem;
-  cursor:pointer;
-  box-shadow:0 2px 6px rgba(0,0,0,0.2);
+/* Arrow-only return button bottom-left */
+#return-button {
+  position: fixed;
+  bottom: 1rem;
+  left: 1rem;
+  background: #1976d2;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 3.5rem;      /* ~56px */
+  height: 3.5rem;     /* ~56px */
+  padding: 0;
+  font-size: 2rem;    /* arrow size */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
 }
 </style>
 </head><body>
@@ -111,9 +135,16 @@ h1{text-align:center;margin-bottom:1rem;font-size:1.8rem}
     </div><hr>
   </div>
 </div>
-<button id="return-button" onclick="window.location.href='index_en.html'">
-  ← Return to Main Page
+
+<!-- Arrow-only return button -->
+<button
+  id="return-button"
+  title="Return to Main Page"
+  onclick="window.location.href='index_en.html'"
+>
+  ←
 </button>
+
 <script>
 const cards = [
   {arabic:"\u0645\u0648\u062a \u0645\u0646 \u0627\u0644\u062c\u0648\u0639",english:"To starve to death, to die of starvation",french:"Mourir de faim, mourir de la famine"},
@@ -156,6 +187,7 @@ function populateVoiceSelects(){
   });
 }
 speechSynthesis.onvoiceschanged=populateVoiceSelects;
+// Modal controls
 const modal=document.getElementById('settings-modal');
 document.getElementById('settings-button').onclick=()=>{ populateVoiceSelects(); modal.style.display='flex'; };
 modal.querySelector('.close').onclick=()=>{ modal.style.display='none'; localStorage.setItem('flashcardVoiceSettings',JSON.stringify(voiceSettings)); };
@@ -169,6 +201,7 @@ document.querySelectorAll('.lang-settings').forEach(cfg=>{
   pitch.oninput=e=>{pv.textContent=e.target.value;voiceSettings[lang].pitch=+e.target.value;};
   pitch.value=voiceSettings[lang].pitch; pv.textContent=pitch.value;
 });
+// Card builder
 function createCard(d,i){
   const card=document.createElement('div'); card.className='flashcard'; card.dataset.side=0;
   const badge=document.createElement('span'); badge.className='remembered-badge'; badge.textContent='Remembered ✓';
@@ -195,11 +228,13 @@ function createCard(d,i){
   card.append(btns);
   return card;
 }
+// Flip-all
 document.getElementById('flip-all-button').onclick=()=>{
   document.querySelectorAll('.flashcard').forEach((c,i)=>{
-    c.dataset.side=0; c.querySelector('.content').textContent=cards[i].arabic;
+    c.dataset.side=0; c.querySelector('.content').textContent = cards[i].arabic;
   });
 };
+// Init
 window.addEventListener('DOMContentLoaded',()=>{
   const cont=document.getElementById('card-container');
   cards.forEach((c,i)=>cont.append(createCard(c,i)));
